--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -5,52 +5,205 @@
     </button>
   </app-toolbar-title>
 
-<div class="container">
-  Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut atque tempore dolore sit impedit culpa incidunt reiciendis debitis cumque quibusdam! Earum quidem perspiciatis quod odio excepturi dolore aperiam, dignissimos at.
-<br>
-<br>
-<br>
-<br>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut atque tempore dolore sit impedit culpa incidunt reiciendis debitis cumque quibusdam! Earum quidem perspiciatis quod odio excepturi dolore aperiam, dignissimos at.
-<br>
-<br>
-<br>
-<br>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut atque tempore dolore sit impedit culpa incidunt reiciendis debitis cumque quibusdam! Earum quidem perspiciatis quod odio excepturi dolore aperiam, dignissimos at.
-<br>
-<br>
-<br>
-<br>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut atque tempore dolore sit impedit culpa incidunt reiciendis debitis cumque quibusdam! Earum quidem perspiciatis quod odio excepturi dolore aperiam, dignissimos at.
-<br>
-<br>
-<br>
-<br>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut atque tempore dolore sit impedit culpa incidunt reiciendis debitis cumque quibusdam! Earum quidem perspiciatis quod odio excepturi dolore aperiam, dignissimos at.
-<br>
-<br>
-<br>
-<br>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut atque tempore dolore sit impedit culpa incidunt reiciendis debitis cumque quibusdam! Earum quidem perspiciatis quod odio excepturi dolore aperiam, dignissimos at.
-<br>
-<br>
-<br>
-<br>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut atque tempore dolore sit impedit culpa incidunt reiciendis debitis cumque quibusdam! Earum quidem perspiciatis quod odio excepturi dolore aperiam, dignissimos at.
-<br>
-<br>
-<br>
-<br>
-Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut atque tempore dolore sit impedit culpa incidunt reiciendis debitis cumque quibusdam! Earum quidem perspiciatis quod odio excepturi dolore aperiam, dignissimos at.
-<br>
-<br>
-<br>
-<br>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut atque tempore dolore sit impedit culpa incidunt reiciendis debitis cumque quibusdam! Earum quidem perspiciatis quod odio excepturi dolore aperiam, dignissimos at.
-<br>
-<br>
-<br>
-<br>
-  <router-outlet></router-outlet>
-</div>
-</div>
+  <div fxLayout="row wrap" fxLayoutGap="20px grid">
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
+      <mat-card class="mat-elevation-z4 fixed-card">
+        <embed src="assets/logica.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <mat-card-subtitle>
+          Certificados
+        </mat-card-subtitle>
+        <mat-card-title> Lógica de Programação Essencial</mat-card-title>
+        <mat-card-content>
+          Carga horária de 4 horas
+        </mat-card-content>
+        <mat-card-content>
+          28/02/2023
+        </mat-card-content>
+        <br>
+        <mat-divider></mat-divider>
+      </mat-card>
+    </div>
 
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
+      <mat-card class="mat-elevation-z4 fixed-card">
+        <embed src="assets/github.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <mat-card-subtitle>
+          Certificados
+        </mat-card-subtitle>
+        <mat-card-title> Trabalhando com Braches no GitHub</mat-card-title>
+        <mat-card-content>
+          Carga horária de 3 horas
+        </mat-card-content>
+        <mat-card-content>
+          09/03/2023
+        </mat-card-content>
+        <br>
+        <mat-divider></mat-divider>
+      </mat-card>
+    </div>
+
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
+      <mat-card class="mat-elevation-z4 fixed-card">
+        <embed src="assets/html.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <mat-card-subtitle>
+          Certificados
+        </mat-card-subtitle>
+        <mat-card-title> HTM5 </mat-card-title>
+        <mat-card-content>
+          Carga horária de 40 horas
+        </mat-card-content>
+        <mat-card-content>
+          05/05/2023
+        </mat-card-content>
+        <br>
+        <mat-divider></mat-divider>
+      </mat-card>
+    </div>
+
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
+      <mat-card class="mat-elevation-z4 fixed-card">
+        <embed src="assets/java.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <mat-card-subtitle>
+          Certificados
+        </mat-card-subtitle>
+        <mat-card-title> Java Básico</mat-card-title>
+        <mat-card-content>
+          Carga horária de 40 horas
+        </mat-card-content>
+        <mat-card-content>
+          10/08/2023
+        </mat-card-content>
+        <br>
+        <mat-divider></mat-divider>
+      </mat-card>
+    </div>
+
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
+      <mat-card class="mat-elevation-z4 fixed-card">
+        <embed src="assets/mysql.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <mat-card-subtitle>
+          Certificados
+        </mat-card-subtitle>
+        <mat-card-title> MYSQL </mat-card-title>
+        <mat-card-content>
+          Carga horária de 40 horas
+        </mat-card-content>
+        <mat-card-content>
+          17/06/2023
+        </mat-card-content>
+        <br>
+        <mat-divider></mat-divider>
+      </mat-card>
+    </div>
+
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
+      <mat-card class="mat-elevation-z4 fixed-card">
+        <embed src="assets/webapis.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <mat-card-subtitle>
+          Certificados
+        </mat-card-subtitle>
+        <mat-card-title> Desenvolvimento de Web APIs .NET Core com MySQL </mat-card-title>
+        <mat-card-content>
+          Carga horária de 5 horas
+        </mat-card-content>
+        <mat-card-content>
+          09/10/2023
+        </mat-card-content>
+        <br>
+        <mat-divider></mat-divider>
+      </mat-card>
+    </div>
+
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
+      <mat-card class="mat-elevation-z4 fixed-card">
+        <embed src="assets/rgrx.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <mat-card-subtitle>
+          Certificados
+        </mat-card-subtitle>
+        <mat-card-title> Aprendendo Redux utilizando NGRX com Angualr 13+ </mat-card-title>
+        <mat-card-content>
+          Carga horária de 4 horas
+        </mat-card-content>
+        <mat-card-content>
+          19/01/2024
+        </mat-card-content>
+        <br>
+        <mat-divider></mat-divider>
+      </mat-card>
+    </div>
+
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
+      <mat-card class="mat-elevation-z4 fixed-card">
+        <img mat-card-image src="assets/figma.jpg" alt="Imagem do Curso de Lógica de Programação">
+        <mat-card-subtitle>
+          Certificados
+        </mat-card-subtitle>
+        <mat-card-title> Construa protótipos rápidos e funcionais com Figma </mat-card-title>
+        <mat-card-content>
+          Carga horária de 3 horas
+        </mat-card-content>
+        <mat-card-content>
+          02/02/2024
+        </mat-card-content>
+        <br>
+        <mat-divider></mat-divider>
+      </mat-card>
+    </div>
+
+
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
+      <mat-card class="mat-elevation-z4 fixed-card">
+        <embed src="assets/Nextjs.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <mat-card-subtitle>
+          Certificados
+        </mat-card-subtitle>
+        <mat-card-title> NextJs do zero ao avançado na pratica 2024 </mat-card-title>
+        <mat-card-content>
+          Carga horária de 25 horas
+        </mat-card-content>
+        <mat-card-content>
+          10/05/2024
+        </mat-card-content>
+        <br>
+        <mat-divider></mat-divider>
+      </mat-card>
+    </div>
+
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
+      <mat-card class="mat-elevation-z4 fixed-card">
+        <embed src="assets/angular.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <mat-card-subtitle>
+          Certificados
+        </mat-card-subtitle>
+        <mat-card-title> Formação Angular 17 - 2024 </mat-card-title>
+        <mat-card-content>
+          Carga horária de 18 horas
+        </mat-card-content>
+        <mat-card-content>
+          30/07/2024
+        </mat-card-content>
+        <br>
+        <mat-divider></mat-divider>
+      </mat-card>
+    </div>
+
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
+      <mat-card class="mat-elevation-z4 fixed-card">
+        <embed src="assets/Angular Material.pdf" type="application/pdf" width="100%" height="100%" style="pointer-events: none;" />
+        <mat-card-subtitle>
+          Certificados
+        </mat-card-subtitle>
+        <mat-card-title> RxJs + Angular Material - Front-end  Reativo do Zero </mat-card-title>
+        <mat-card-content>
+          Carga horária de 15 horas
+        </mat-card-content>
+        <mat-card-content>
+          29/08/2024
+        </mat-card-content>
+        <br>
+        <mat-divider></mat-divider>
+      </mat-card>
+    </div>
+
+  </div>
+</div>
