--- a/src/app/pages/students/students.component.html
+++ b/src/app/pages/students/students.component.html
@@ -1,5 +1,5 @@
 <div class="content mat-elevation-z4">
-  <app-toolbar-title title="Aluno" icon="fa-chalkboard-user">
+  <app-toolbar-title title="Projeto" icon="fa-chalkboard-user">
     <button mat-icon-button>
       <mat-icon>share</mat-icon>
     </button>
