--- a/src/app/shared/components/toolbar-menu/toolbar-menu.component.html
+++ b/src/app/shared/components/toolbar-menu/toolbar-menu.component.html
@@ -16,10 +16,10 @@
         <span>{{item.label}}</span>
       </a>
     </mat-menu>
-    <button mat-button [matMenuTriggerFor]="menu">
+    <!--<button mat-button [matMenuTriggerFor]="menu">
       <mat-icon class="space-right-icon">account_circle</mat-icon>
       <span>Danilo Francisquete</span>
-    </button>
+    </button>-->
 
     <mat-menu #menu="matMenu">
       <a href="/usres/myProfile"mat-menu-item>
