--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -8,7 +8,7 @@
   <div fxLayout="row wrap" fxLayoutGap="20px grid">
     <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
       <mat-card class="mat-elevation-z4 fixed-card">
-        <embed src="assets/logica.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <img mat-card-image src="assets/logica.jpg" alt="logica" loading="lazy">
         <mat-card-subtitle>
           Certificados
         </mat-card-subtitle>
@@ -20,13 +20,13 @@
           28/02/2023
         </mat-card-content>
         <br>
-        <mat-divider></mat-divider>
+
       </mat-card>
     </div>
 
     <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
       <mat-card class="mat-elevation-z4 fixed-card">
-        <embed src="assets/github.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <img mat-card-image src="assets/github.jpg" alt="github" loading="lazy">
         <mat-card-subtitle>
           Certificados
         </mat-card-subtitle>
@@ -38,13 +38,13 @@
           09/03/2023
         </mat-card-content>
         <br>
-        <mat-divider></mat-divider>
+
       </mat-card>
     </div>
 
     <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
       <mat-card class="mat-elevation-z4 fixed-card">
-        <embed src="assets/html.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <img mat-card-image src="assets/html.jpg" alt="html" loading="lazy">
         <mat-card-subtitle>
           Certificados
         </mat-card-subtitle>
@@ -56,13 +56,13 @@
           05/05/2023
         </mat-card-content>
         <br>
-        <mat-divider></mat-divider>
+
       </mat-card>
     </div>
 
     <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
       <mat-card class="mat-elevation-z4 fixed-card">
-        <embed src="assets/java.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <img mat-card-image src="assets/java.jpg" alt="java" loading="lazy">
         <mat-card-subtitle>
           Certificados
         </mat-card-subtitle>
@@ -74,13 +74,13 @@
           10/08/2023
         </mat-card-content>
         <br>
-        <mat-divider></mat-divider>
+
       </mat-card>
     </div>
 
     <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
       <mat-card class="mat-elevation-z4 fixed-card">
-        <embed src="assets/mysql.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <img mat-card-image src="assets/msyql.jpg" alt="mysq" loading="lazy">
         <mat-card-subtitle>
           Certificados
         </mat-card-subtitle>
@@ -92,13 +92,13 @@
           17/06/2023
         </mat-card-content>
         <br>
-        <mat-divider></mat-divider>
+
       </mat-card>
     </div>
 
     <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
       <mat-card class="mat-elevation-z4 fixed-card">
-        <embed src="assets/webapis.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <img mat-card-image src="assets/api.jpg" alt="api" loading="lazy">
         <mat-card-subtitle>
           Certificados
         </mat-card-subtitle>
@@ -110,13 +110,13 @@
           09/10/2023
         </mat-card-content>
         <br>
-        <mat-divider></mat-divider>
+
       </mat-card>
     </div>
 
     <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
       <mat-card class="mat-elevation-z4 fixed-card">
-        <embed src="assets/rgrx.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <img mat-card-image src="assets/rgrx.jpg" alt="rgrx" loading="lazy">
         <mat-card-subtitle>
           Certificados
         </mat-card-subtitle>
@@ -128,13 +128,13 @@
           19/01/2024
         </mat-card-content>
         <br>
-        <mat-divider></mat-divider>
+
       </mat-card>
     </div>
 
     <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
       <mat-card class="mat-elevation-z4 fixed-card">
-        <img mat-card-image src="assets/figma.jpg" alt="Imagem do Curso de Lógica de Programação">
+        <img mat-card-image src="assets/figma.jpg" alt="Imagem do Curso de Lógica de Programação" loading="lazy">
         <mat-card-subtitle>
           Certificados
         </mat-card-subtitle>
@@ -146,14 +146,14 @@
           02/02/2024
         </mat-card-content>
         <br>
-        <mat-divider></mat-divider>
+
       </mat-card>
     </div>
 
 
     <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
       <mat-card class="mat-elevation-z4 fixed-card">
-        <embed src="assets/Nextjs.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <img mat-card-image src="assets/nextjs.jpg" alt="nexts" loading="lazy">
         <mat-card-subtitle>
           Certificados
         </mat-card-subtitle>
@@ -165,13 +165,13 @@
           10/05/2024
         </mat-card-content>
         <br>
-        <mat-divider></mat-divider>
+
       </mat-card>
     </div>
 
     <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
       <mat-card class="mat-elevation-z4 fixed-card">
-        <embed src="assets/angular.pdf" type="application/pdf" width="100%" height="200px" style="pointer-events: none;" />
+        <img mat-card-image src="assets/angular.jpg" alt="angular" loading="lazy">
         <mat-card-subtitle>
           Certificados
         </mat-card-subtitle>
@@ -183,13 +183,13 @@
           30/07/2024
         </mat-card-content>
         <br>
-        <mat-divider></mat-divider>
+
       </mat-card>
     </div>
 
     <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="33" fxFlex.lg="25">
       <mat-card class="mat-elevation-z4 fixed-card">
-        <embed src="assets/Angular Material.pdf" type="application/pdf" width="100%" height="100%" style="pointer-events: none;" />
+        <img mat-card-image src="assets/angularmaterial.jpg" alt="angular material" loading="lazy">
         <mat-card-subtitle>
           Certificados
         </mat-card-subtitle>
@@ -201,7 +201,7 @@
           29/08/2024
         </mat-card-content>
         <br>
-        <mat-divider></mat-divider>
+
       </mat-card>
     </div>
 
