--- a/src/app/pages/students/students.component.html
+++ b/src/app/pages/students/students.component.html
@@ -1,14 +1,34 @@
 <div class="content mat-elevation-z4">
-  <app-toolbar-title title="Projeto" icon="fa-chalkboard-user">
+  <app-toolbar-title title="Formação Acadêmica" icon="fa-chalkboard-user">
     <button mat-icon-button>
       <mat-icon>share</mat-icon>
     </button>
   </app-toolbar-title>
 
-<div class="container">
-  <router-outlet></router-outlet>
+  <div class="container">
+    <div class="academic-grid">
+      <mat-card class="academic-card">
+        <mat-card-header>
+          <mat-card-title>Estácio</mat-card-title>
+          <mat-card-subtitle>Graduação em Análise e Desenvolvimento de Sistemas</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          <p><strong>Período:</strong> Mar de 2023 - Ago de 2025</p>
+          <p><strong>Descrição:</strong> Formação voltada para a análise e desenvolvimento de sistemas, abrangendo programação, design de software, bancos de dados e desenvolvimento web. Enfoque em soluções tecnológicas para a criação e manutenção de sistemas eficientes e inovadores.</p>
+        </mat-card-content>
+      </mat-card>
+
+      <mat-card class="academic-card">
+        <mat-card-header>
+          <mat-card-title>Faculdade Paranapanema</mat-card-title>
+          <mat-card-subtitle>Bacharelado em Administração de Empresas</mat-card-subtitle>
+        </mat-card-header>
+        <mat-card-content>
+          <p><strong>Período:</strong> 2013 - 2016</p>
+          <p><strong>Descrição:</strong> Formação em Administração de Empresas com foco em gestão, finanças, marketing e recursos humanos, desenvolvendo habilidades para análise e tomada de decisões estratégicas no ambiente corporativo.</p>
+          <p><strong>Nota:</strong> 98</p>
+        </mat-card-content>
+      </mat-card>
+    </div>
+  </div>
 </div>
-</div>
-
-
-
