--- a/src/app/pages/teachers/teachers.component.html
+++ b/src/app/pages/teachers/teachers.component.html
@@ -1,13 +1,62 @@
 <div class="content mat-elevation-z4">
   <app-toolbar-title title="Experiências" icon="fa-person-chalkboard">
-    <button mat-icon-button>
-      <mat-icon>share</mat-icon>
-    </button>
   </app-toolbar-title>
 
-<div class="container">
-  <router-outlet></router-outlet>
-</div>
-</div>
+  <div class="container">
+    <mat-accordion>
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Desenvolvedor de Software
+          </mat-panel-title>
+          <mat-panel-description>
+            Code Express · Abr de 2023 - o momento
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-card>
+          <mat-card-content>
+            <p>
+              Especializado em Java, Python, Angular, AngularJS, ReactJS, NextJS, .NET, Redux e Docker. Experiência em desenvolvimento de aplicações web completas, desde o front-end até o back-end, com foco em performance, segurança e escalabilidade. Habilidade em colaborar com equipes multidisciplinares para entregar soluções inovadoras e eficientes. Apaixonado por tecnologia e sempre em busca de novos desafios e aprendizado contínuo.
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </mat-expansion-panel>
 
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Gerente Geral
+          </mat-panel-title>
+          <mat-panel-description>
+            Juliana Modas · Mai de 2015 - Out de 2023
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-card>
+          <mat-card-content>
+            <p>
+              Planeja, organiza e controla as rotinas de comércios, envolvendo a liderança de equipes, gestão de estoque e programação de compras. Acompanha o fechamento de caixa, faturamento e indicadores de resultados para alcance dos objetivos organizacionais. Faz a gestão e contabilidade geral da loja.
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </mat-expansion-panel>
 
+      <mat-expansion-panel>
+        <mat-expansion-panel-header>
+          <mat-panel-title>
+            Auxiliar Administrativa
+          </mat-panel-title>
+          <mat-panel-description>
+            Usina Alto Alegre S/A · Mai de 2009 - Mar de 2016
+          </mat-panel-description>
+        </mat-expansion-panel-header>
+        <mat-card>
+          <mat-card-content>
+            <p>
+              Assegura que o material adequado esteja, na quantidade devida, no local certo, quando necessário. Impede que exista divergência de inventário e perda de qualquer natureza. Preserva a qualidade e as quantidades exatas. Possui instalações adequadas e recursos de movimentação e distribuição suficientes a um atendimento rápido e eficiente.
+            </p>
+          </mat-card-content>
+        </mat-card>
+      </mat-expansion-panel>
+    </mat-accordion>
+  </div>
+</div>
