--- a/src/app/pages/support/support.component.html
+++ b/src/app/pages/support/support.component.html
@@ -1,35 +1,63 @@
-<div class="container">
-  <div class="contact-list">
-    <mat-card class="contact-item">
-      <i class="fas fa-envelope contact-icon"></i>
-      <mat-card-title>Email</mat-card-title>
-      <mat-card-content>
-        <a href="mailto:danilofrancisquete&#64;hotmail.com">danilofrancisquete&#64;hotmail.com</a>
-      </mat-card-content>
-    </mat-card>
+<div class="content mat-elevation-z4">
+  <div fxLayout="row wrap" fxLayoutGap="20px grid" class="contact-list" fxLayoutAlign="center start">
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="25">
+      <mat-card class="contact-item">
+        <mat-card-title>Projeto de Cardapio</mat-card-title>
+        <mat-card-content>
+          <img src="assets/cardapio.png" alt="cardapio" class="card-image">
+          <a href="https://cardapio-two-self.vercel.app/" target="_blank">Acesse o link</a>
+        </mat-card-content>
+      </mat-card>
+    </div>
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="25">
+      <mat-card class="contact-item">
+        <mat-card-title>Projeto de Cardapio</mat-card-title>
+        <mat-card-content>
+          <img src="assets/cardapio.png" alt="cardapio" class="card-image">
+          <a href="https://cardapio-two-self.vercel.app/" target="_blank">Acesse o link</a>
+        </mat-card-content>
+      </mat-card>
+    </div>
 
-    <mat-card class="contact-item">
-      <i class="fas fa-phone contact-icon-telefone"></i>
-      <mat-card-title>Telefone</mat-card-title>
-      <mat-card-content>
-        <a href="tel:+5543998131155">+55 (43) 99813-1155</a>
-      </mat-card-content>
-    </mat-card>
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="25">
+      <mat-card class="contact-item">
+        <mat-card-title>Projeto de Cardapio</mat-card-title>
+        <mat-card-content>
+          <img src="assets/cardapio.png" alt="cardapio" class="card-image">
+          <a href="https://cardapio-two-self.vercel.app/" target="_blank">Acesse o link</a>
+        </mat-card-content>
+      </mat-card>
+    </div>
 
-    <mat-card class="contact-item">
-      <i class="fab fa-github contact-icon-git"></i>
-      <mat-card-title>GitHub</mat-card-title>
-      <mat-card-content>
-        <a href="https://github.com/DaniloFrancisquete" target="_blank">github.com/DaniloFrancisquete</a>
-      </mat-card-content>
-    </mat-card>
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="25">
+      <mat-card class="contact-item">
+        <mat-card-title>Projeto de Cardapio</mat-card-title>
+        <mat-card-content>
+          <img src="assets/cardapio.png" alt="cardapio" class="card-image">
+          <a href="https://cardapio-two-self.vercel.app/" target="_blank">Acesse o link</a>
+        </mat-card-content>
+      </mat-card>
+    </div>
 
-    <mat-card class="contact-item">
-      <i class="fab fa-linkedin contact-icon"></i>
-      <mat-card-title>LinkedIn</mat-card-title>
-      <mat-card-content>
-        <a href="https://www.linkedin.com/in/danilo-francisquete-412948106/" target="_blank">linkedin.com/in/danilo-francisquete</a>
-      </mat-card-content>
-    </mat-card>
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="25">
+      <mat-card class="contact-item">
+        <mat-card-title>Projeto de Cardapio</mat-card-title>
+        <mat-card-content>
+          <img src="assets/cardapio.png" alt="cardapio" class="card-image">
+          <a href="https://cardapio-two-self.vercel.app/" target="_blank">Acesse o link</a>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="25">
+      <mat-card class="contact-item">
+        <mat-card-title>Projeto de Cardapio</mat-card-title>
+        <mat-card-content>
+          <img src="assets/cardapio.png" alt="cardapio" class="card-image">
+          <a href="https://cardapio-two-self.vercel.app/" target="_blank">Acesse o link</a>
+        </mat-card-content>
+      </mat-card>
+    </div>
+
   </div>
 </div>
