--- a/src/app/pages/support/support.component.scss
+++ b/src/app/pages/support/support.component.scss
@@ -1,80 +1,23 @@
-.container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  min-height: 50vh;
-  background-color: #f4f5f7;
+.content {
   padding: 20px;
 }
 
 .contact-list {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 30px;
-  max-width: 800px;
-  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px; /* Espaçamento entre os cards */
 }
 
 .contact-item {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  padding: 20px;
-  background-color: #ffffff;
-  border-radius: 10px;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-  transition: box-shadow 0.3s ease;
+  align-items: center;
+  max-width: 100%; /* Faz com que o card não ultrapasse o container */
 }
 
-.contact-item:hover {
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-}
-
-.contact-icon {
-  font-size: 60px;
-  color: #0a66c2;
-  margin-bottom: 20px;
-
-  &-telefone {
-    color: #575757;
-    margin-bottom: 20px;
-    font-size: 60px;
-  }
-
-  &-git {
-   color: black;
-   margin-bottom: 20px;
-   font-size: 60px;
-  }
-
-}
-
-mat-card-title {
-  font-size: 20px;
-  font-weight: bold;
-  color: #333333;
-  margin-bottom: 10px;
-}
-
-mat-card-content a {
-  color: #007bff;
-  text-decoration: none;
-  font-size: 16px;
-  font-weight: 500;
-}
-
-mat-card-content a:hover {
-  text-decoration: underline;
-}
-
-.contact-item p {
-  margin: 0;
-  font-size: 16px;
-  color: #666666;
-}
-
-@media (max-width: 768px) {
-  .contact-list {
-    grid-template-columns: 1fr;
-  }
+.card-image {
+  width: 100%; /* Faz com que a imagem preencha o card */
+  height: auto; /* Mantém a proporção da imagem */
+  object-fit: cover; /* Faz a imagem cobrir o card sem distorcer */
+  border-radius: 4px; /* Arredonda os cantos da imagem */
 }
