--- a/src/app/pages/support/support.component.html
+++ b/src/app/pages/support/support.component.html
@@ -1,63 +1,79 @@
 <div class="content mat-elevation-z4">
   <div fxLayout="row wrap" fxLayoutGap="20px grid" class="contact-list" fxLayoutAlign="center start">
-    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="25">
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="30">
       <mat-card class="contact-item">
-        <mat-card-title>Projeto de Cardapio</mat-card-title>
-        <mat-card-content>
-          <img src="assets/cardapio.png" alt="cardapio" class="card-image">
-          <a href="https://cardapio-two-self.vercel.app/" target="_blank">Acesse o link</a>
-        </mat-card-content>
-      </mat-card>
-    </div>
-    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="25">
-      <mat-card class="contact-item">
-        <mat-card-title>Projeto de Cardapio</mat-card-title>
-        <mat-card-content>
-          <img src="assets/cardapio.png" alt="cardapio" class="card-image">
-          <a href="https://cardapio-two-self.vercel.app/" target="_blank">Acesse o link</a>
-        </mat-card-content>
+        <a class="contact-link" href="https://cardapio-two-self.vercel.app/" target="_blank">
+          <mat-card-subtitle class="subtitle">Projeto de Cardapio</mat-card-subtitle>
+          <mat-card-content>
+            <img src="assets/cardapio.png" alt="cardapio" class="card-image">
+            <mat-card-title class="title">Sistema Web com NextJS</mat-card-title>
+          </mat-card-content>
+        </a>
       </mat-card>
     </div>
 
-    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="25">
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="30">
       <mat-card class="contact-item">
-        <mat-card-title>Projeto de Cardapio</mat-card-title>
-        <mat-card-content>
-          <img src="assets/cardapio.png" alt="cardapio" class="card-image">
-          <a href="https://cardapio-two-self.vercel.app/" target="_blank">Acesse o link</a>
-        </mat-card-content>
+        <a class="contact-link" href="https://todo-list-16-beige.vercel.app/" target="_blank">
+          <mat-card-subtitle class="subtitle">Projeto de tarefas</mat-card-subtitle>
+          <mat-card-content>
+            <img src="assets/to-do-list.png" alt="to-do-list" class="card-image">
+            <mat-card-title class="title">Sistema Web com Angular</mat-card-title>
+          </mat-card-content>
+        </a>
       </mat-card>
     </div>
 
-    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="25">
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="30">
       <mat-card class="contact-item">
-        <mat-card-title>Projeto de Cardapio</mat-card-title>
-        <mat-card-content>
-          <img src="assets/cardapio.png" alt="cardapio" class="card-image">
-          <a href="https://cardapio-two-self.vercel.app/" target="_blank">Acesse o link</a>
-        </mat-card-content>
+        <a class="contact-link" href="https://crud-produtos-nu.vercel.app/login" target="_blank">
+          <mat-card-subtitle class="subtitle">CRUD Produtos Simples</mat-card-subtitle>
+          <mat-card-content>
+            <img src="assets/crudprodutos.png" alt="cardapio" class="card-image">
+            <mat-card-title class="title">Sistema Web com Angular</mat-card-title>
+          </mat-card-content>
+        </a>
       </mat-card>
     </div>
 
-    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="25">
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="30">
       <mat-card class="contact-item">
-        <mat-card-title>Projeto de Cardapio</mat-card-title>
-        <mat-card-content>
-          <img src="assets/cardapio.png" alt="cardapio" class="card-image">
-          <a href="https://cardapio-two-self.vercel.app/" target="_blank">Acesse o link</a>
-        </mat-card-content>
+        <a class="contact-link" href="https://crud-usuarios-seven.vercel.app/" target="_blank">
+          <mat-card-subtitle class="subtitle">CRUD Usuarios Simples</mat-card-subtitle>
+          <mat-card-content>
+            <img src="assets/crudusuarios.png" alt="crudusuarios" class="card-image">
+            <mat-card-title class="title">Sistema Web com Angular</mat-card-title>
+          </mat-card-content>
+        </a>
       </mat-card>
     </div>
 
-    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="25">
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="30">
       <mat-card class="contact-item">
-        <mat-card-title>Projeto de Cardapio</mat-card-title>
-        <mat-card-content>
-          <img src="assets/cardapio.png" alt="cardapio" class="card-image">
-          <a href="https://cardapio-two-self.vercel.app/" target="_blank">Acesse o link</a>
-        </mat-card-content>
+        <a class="contact-link" href="https://estudo-beta.vercel.app/" target="_blank">
+          <mat-card-subtitle class="subtitle">CodeExpress</mat-card-subtitle>
+          <mat-card-content>
+            <img src="assets/tarefas.png" alt="devcontrole" class="card-image">
+            <mat-card-title class="title">Sistema Web com Angular</mat-card-title>
+          </mat-card-content>
+        </a>
       </mat-card>
     </div>
+
+
+    <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="30">
+      <mat-card class="contact-item">
+        <a class="contact-link" href="https://estudo-beta.vercel.app/" target="_blank">
+          <mat-card-subtitle class="subtitle">Gerenciamento de Tarefas</mat-card-subtitle>
+          <mat-card-content>
+            <img src="assets/tarefas.png" alt="devcontrole" class="card-image">
+            <mat-card-title class="title">Sistema Web com NextJS</mat-card-title>
+          </mat-card-content>
+        </a>
+      </mat-card>
+    </div>
+
+
 
   </div>
 </div>
