--- a/src/app/pages/support/support.component.scss
+++ b/src/app/pages/support/support.component.scss
@@ -5,19 +5,52 @@
 .contact-list {
   display: flex;
   flex-wrap: wrap;
-  gap: 20px; /* Espaçamento entre os cards */
+  gap: 20px;
+}
+
+.contact-link {
+  color: inherit;
+  text-decoration: none;
+}
+
+.contact-link:hover {
+  color: inherit;
+}
+
+.subtitle {
+  text-align: center;
+  padding: 10px;
+  font-size: 16px;
+}
+
+.title {
+  text-align: center;
 }
 
 .contact-item {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  max-width: 100%; /* Faz com que o card não ultrapasse o container */
+  justify-content: space-between;
+  height: 100%;
 }
 
 .card-image {
-  width: 100%; /* Faz com que a imagem preencha o card */
-  height: auto; /* Mantém a proporção da imagem */
-  object-fit: cover; /* Faz a imagem cobrir o card sem distorcer */
-  border-radius: 4px; /* Arredonda os cantos da imagem */
+  width: 100%;
+  max-height: 150px;
+  object-fit: cover;
+}
+
+.mat-card-content {
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.mat-card {
+  height: 100%; /* Garante que todos os cards tenham a mesma altura */
+}
+
+.title, .subtitle {
+  text-align: center;
 }
