--- a/src/app/pages/support/support.component.html
+++ b/src/app/pages/support/support.component.html
@@ -50,10 +50,10 @@
 
     <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="30">
       <mat-card class="contact-item">
-        <a class="contact-link" href="https://estudo-beta.vercel.app/" target="_blank">
+        <a class="contact-link" href="https://www.codeexpress.net/" target="_blank">
           <mat-card-subtitle class="subtitle">CodeExpress</mat-card-subtitle>
           <mat-card-content>
-            <img src="assets/tarefas.png" alt="devcontrole" class="card-image">
+            <img src="assets/codeexprees.png" alt="devcontrole" class="card-image">
             <mat-card-title class="title">Sistema Web com Angular</mat-card-title>
           </mat-card-content>
         </a>
