--- a/src/app/pages/students/students.component.html
+++ b/src/app/pages/students/students.component.html
@@ -1,8 +1,5 @@
 <div class="content mat-elevation-z4">
-  <app-toolbar-title title="Formação Acadêmica" icon="fa-chalkboard-user">
-    <button mat-icon-button>
-      <mat-icon>share</mat-icon>
-    </button>
+  <app-toolbar-title title="Formação Acadêmica" icon="fa-solid fa-graduation-cap">
   </app-toolbar-title>
 
   <div class="container">
