--- a/src/app/pages/support/support.component.html
+++ b/src/app/pages/support/support.component.html
@@ -1,4 +1,6 @@
 <div class="content mat-elevation-z4">
+  <app-toolbar-title title="Projetos" icon="fa-diagram-project">
+  </app-toolbar-title>
   <div fxLayout="row wrap" fxLayoutGap="20px grid" class="contact-list" fxLayoutAlign="center start">
     <div fxFlex="25" fxFlex.xs="100" fxFlex.sm="50" fxFlex.md="25" fxFlex.lg="30">
       <mat-card class="contact-item">
