--- a/src/app/pages/teachers/teachers.component.html
+++ b/src/app/pages/teachers/teachers.component.html
@@ -1,5 +1,5 @@
 <div class="content mat-elevation-z4">
-  <app-toolbar-title title="Experiências" icon="fa-person-chalkboard">
+  <app-toolbar-title title="Experiências" icon="fa-user-tie">
   </app-toolbar-title>
 
   <div class="container">
