--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,7 +17,7 @@ mat-sidenav-container {
   display: flex;
   flex-direction: column;
   align-items: start;
-  background-color:#575757 ;
+  background-color: #3f51b5; ;
 
   &-top {
    height: 40px;
