--- a/src/app/pages/courses/courses.component.html
+++ b/src/app/pages/courses/courses.component.html
@@ -1,5 +1,5 @@
 <div class="content mat-elevation-z4">
-  <app-toolbar-title title="Cursos" icon="fa-solid fa-graduation-cap">
+  <app-toolbar-title title="Cursos" icon="fa-certificate">
   </app-toolbar-title>
 
   <div fxLayout="row wrap" fxLayoutGap="20px grid">
